Created simple websocket server implementation

--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "untitled",
-  "version": "0.0.0",
+  "name": "durak-cards",
+  "author": "Alexander. E. Fedotov",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon --exec babel-node ./app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-ws": "^4.0.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "ws": "^7.3.1"
+  },
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-preset-latest": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "eslint": "7.8.1",
+    "babel-eslint": "9.0.0",
+    "nodemon": "2.0.4"
   }
 }
