Converted prompt to use formik for more consistent error handling and form handling logic.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-ws": "^4.0.0",
+    "formik": "^2.1.5",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "ws": "^7.3.1"
