--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-loader-spinner": "^3.1.14",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
