--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
     "morgan": "~1.9.1",
+    "nanoid": "^3.1.12",
     "ws": "^7.3.1"
   },
   "devDependencies": {
