--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "start": "nodemon --exec babel-node ./app.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "express-ws": "^4.0.0",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.5",
-    "morgan": "~1.9.1",
-    "nanoid": "^3.1.12",
-    "ws": "^7.3.1"
+    "bcryptjs": "2.4.3",
+    "cookie-parser": "1.4.5",
+    "cors": "2.8.5",
+    "debug": "2.6.9",
+    "dotenv": "8.2.0",
+    "express": "4.16.4",
+    "express-ws": "4.0.0",
+    "http-errors": "1.6.3",
+    "jsonwebtoken": "8.5.1",
+    "mongoose": "5.10.6",
+    "morgan": "1.9.1",
+    "nanoid": "3.1.12",
+    "ws": "7.3.1"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
