--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "ws": "7.3.1"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/node": "^7.12.6",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "7.12.7",
     "babel-eslint": "10.1.0",
-    "babel-preset-latest": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
     "nodemon": "2.0.4"
   }
 }
