--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "5.10.6",
     "morgan": "1.9.1",
     "nanoid": "3.1.12",
+    "socket.io": "^3.0.4",
     "ws": "7.3.1"
   },
   "devDependencies": {
