--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "debug": "2.6.9",
     "dotenv": "8.2.0",
     "express": "4.16.4",
-    "express-ws": "4.0.0",
     "http-errors": "1.6.3",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.10.6",
     "morgan": "1.9.1",
     "nanoid": "3.1.12",
-    "socket.io": "^3.0.4",
-    "ws": "7.3.1"
+    "socket.io": "^3.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
