--- a/client/package.json
+++ b/client/package.json
@@ -3,23 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "formik": "^2.1.5",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-loader-spinner": "^3.1.14",
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
+    "formik": "2.2.6",
+    "node-sass": "4.14.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-loader-spinner": "3.1.14",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
-    "react-transition-group": "^4.4.1",
-    "socket.io-client": "^3.0.4"
+    "react-transition-group": "4.4.1",
+    "socket.io-client": "3.0.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1"
+    "@testing-library/jest-dom": "5.11.6",
+    "@testing-library/react": "10.4.9",
+    "@testing-library/user-event": "^12.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
