--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "cors": "2.8.5",
     "debug": "2.6.9",
     "dotenv": "8.2.0",
-    "express": "4.16.4",
-    "http-errors": "1.6.3",
+    "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
-    "mongoose": "5.10.6",
-    "morgan": "1.9.1",
-    "nanoid": "3.1.12",
-    "socket.io": "^3.0.4"
+    "mongoose": "5.11.8",
+    "morgan": "1.10.0",
+    "nanoid": "3.1.20",
+    "socket.io": "3.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
