Added features to user dashboard.
- Added GameCard to represent active user games with game deletion integration.

- Added GameDialog which is a component that will be used to create a new game for the user.

- prevent nodemon from reloading server if client sources change.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node ./app.js"
+    "start": "nodemon  --ignore client --exec babel-node ./app.js"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
