--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "10.4.9",
-    "@testing-library/user-event": "^12.5.0"
+    "@testing-library/user-event": "^12.5.0",
+    "clsx": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
