--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "5.11.8",
     "morgan": "1.10.0",
     "nanoid": "3.1.20",
+    "prop-types": "^15.7.2",
     "socket.io": "3.0.4"
   },
   "devDependencies": {
