--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "1.10.0",
     "nanoid": "3.1.20",
     "prop-types": "^15.7.2",
+    "shared": "git+https://github.com/feds01/durak-cards-shared#master",
     "socket.io": "3.0.4"
   },
   "devDependencies": {
