--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "durak-cards",
+  "name": "durak-cards-api",
   "author": "Alexander. E. Fedotov",
   "version": "1.0.0",
   "private": true,
