--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "2.6.9",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "helmet": "^4.3.1",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.11.8",
     "morgan": "1.10.0",
