--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "helmet": "^4.3.1",
+    "joi": "^17.3.0",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.11.8",
     "morgan": "1.10.0",
