Updated build process to specify yarn version.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "15.4.X"
+    "node": "15.x",
+    "yarn": "1.x"
   },
   "scripts": {
     "start": "babel-node ./app.js",
+    "build": "rm yarn.lock && yarn",
     "dev": "nodemon  --ignore client --exec babel-node ./app.js"
   },
   "dependencies": {
