--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,10 @@
+# Database
 MONGODB_PASSWORD=
 MONGODB_CONNECTION_URI=
+
+# Authentication
 JWT_SECRET_KEY=
 JWT_REFRESH_SECRET_KEY=
+
+# Google ReCaptcha
+RE_CAPTCHA_KEY=
