--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "engines": {
     "node": "15.x",
-    "yarn": "1.22.10"
+    "npm": "7.0.15"
   },
   "scripts": {
     "start": "NODE_ENV=production babel-node ./app.js",
