Use npm for heroku

--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "private": true,
   "engines": {
     "node": "15.x",
-    "yarn": "1.22.10"
+    "npm": "7.0.15"
   },
   "scripts": {
-    "build": "yarn install --network-concurrency 1",
     "start": "NODE_ENV=production babel-node ./app.js",
     "dev": "nodemon  --ignore client --exec babel-node ./app.js"
   },
