--- a/sample.env
+++ b/sample.env
@@ -8,3 +8,9 @@ JWT_REFRESH_SECRET_KEY=
 
 # Google ReCaptcha
 RE_CAPTCHA_KEY=
+
+# AWS for static resources like user avatars
+AWS_ACCESS_KEY=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_BUCKET_NAME=
