fixed typescript warnings and updated package.json scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,7 +79,7 @@
   },
   "include": [
     "src/**/*",
-    "./src/auth.d.ts",
-    "./src/socket/gameSocket.ts"
+    "./src/types/auth.d.ts",
+    "./src/types/gameSocket.ts"
   ]
 }
