--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "npm": "7.0.15"
   },
   "scripts": {
-    "start": "NODE_ENV=production babel-node src/app.js",
-    "dev": "nodemon  --ignore client --exec babel-node src/app.js"
+    "build": "tsc --project ./",
+    "start": "NODE_ENV=production node dist/app.js",
+    "dev": "nodemon --exec ts-node src/app.ts"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -30,9 +31,7 @@
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "shared": "git+https://github.com/feds01/durak-cards-shared#master",
-    "socket.io": "3.0.4",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "socket.io": "3.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
@@ -40,13 +39,14 @@
     "@babel/node": "^7.12.6",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "7.12.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
     "@types/node-fetch": "^2.5.8",
-    "@types/socket.io": "^2.1.12",
     "babel-eslint": "10.1.0",
     "nodemon": "2.0.6"
   }
