--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "@babel/node": "^7.12.6",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "7.12.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
@@ -48,6 +46,8 @@
     "@types/morgan": "^1.9.2",
     "@types/node-fetch": "^2.5.8",
     "babel-eslint": "10.1.0",
-    "nodemon": "2.0.6"
+    "nodemon": "2.0.6",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
