--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,45 +3,45 @@
   "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/feds01/durak-cards-client"
+    "url": "https://github.com/feds01/durachok"
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mars/heroku-js-runtime-env": "^3.0.2",
     "@material-ui/core": "5.0.0-alpha.23",
-    "@material-ui/icons": "4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "clsx": "^1.1.1",
-    "formik": "2.2.6",
-    "framer-motion": "^3.2.0",
-    "http-proxy-middleware": "^0.19.1",
+    "@material-ui/icons": "4.11.3",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "clsx": "^2.1.1",
+    "formik": "2.4.6",
+    "framer-motion": "^11.3.4",
+    "http-proxy-middleware": "^3.0.0",
     "lodash.debounce": "^4.0.8",
-    "node-sass": "4.14.1",
-    "react": "^17.0.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "^17.0.1",
-    "react-google-recaptcha": "^2.1.0",
-    "react-loader-spinner": "3.1.14",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.1",
-    "react-transition-group": "^4.4.1",
-    "react-virtuoso": "^1.5.4",
-    "shared": "git+https://github.com/feds01/Durak-Engine#main",
-    "socket.io-client": "3.0.4",
-    "source-map-explorer": "^2.5.2",
-    "typescript": "^4.1.3",
-    "use-sound": "^2.0.1",
-    "web-vitals": "^0.2.4",
-    "yup": "^0.32.8"
+    "node-sass": "9.0.0",
+    "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-loader-spinner": "6.1.6",
+    "react-router": "6.25.0",
+    "react-router-dom": "6.25.0",
+    "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
+    "react-virtuoso": "^4.7.12",
+    "shared": "../engine",
+    "socket.io-client": "4.7.5",
+    "source-map-explorer": "^2.5.3",
+    "typescript": "^5.5.3",
+    "use-sound": "^4.0.3",
+    "web-vitals": "^4.2.1",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -75,9 +75,9 @@
     ]
   },
   "devDependencies": {
-    "husky": "^4.3.8",
-    "prop-types": "^15.7.2",
-    "serve": "^11.3.2",
-    "ts-node": "^9.1.1"
+    "husky": "^9.0.11",
+    "prop-types": "^15.8.1",
+    "serve": "^14.2.3",
+    "ts-node": "^10.9.2"
   }
 }
