--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,53 +1,48 @@
 {
-  "name": "durak-cards-api",
+  "name": "durachock-server",
   "author": "Alexander. E. Fedotov",
   "version": "1.0.0",
   "private": true,
-  "engines": {
-    "node": "15.x",
-    "npm": "7.0.15"
-  },
   "scripts": {
     "build": "tsc --project ./",
     "start": "NODE_ENV=production node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^14.14.22",
-    "aws-sdk": "^2.829.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20.14.10",
+    "aws-sdk": "^2.1659.0",
     "bcryptjs": "2.4.3",
-    "cookie-parser": "1.4.5",
+    "cookie-parser": "1.4.6",
     "cors": "2.8.5",
-    "debug": "2.6.9",
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
-    "helmet": "^4.3.1",
-    "joi": "^17.3.0",
-    "jsonwebtoken": "8.5.1",
-    "mongoose": "5.11.8",
+    "debug": "4.3.5",
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "helmet": "^7.1.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.5.1",
     "morgan": "1.10.0",
-    "nanoid": "3.1.20",
-    "node-fetch": "^2.6.1",
-    "prop-types": "^15.7.2",
-    "shared": "git+https://github.com/feds01/Durak-Engine#main",
-    "socket.io": "3.0.4",
-    "winston": "^3.3.3"
+    "nanoid": "5.0.7",
+    "node-fetch": "^3.3.2",
+    "shared": "file:./../engine/",
+    "socket.io": "4.7.5",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
-    "@babel/node": "^7.12.6",
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.24.9",
+    "@babel/node": "^7.24.8",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "7.12.7",
-    "@types/express": "^4.17.11",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.10.3",
-    "@types/morgan": "^1.9.2",
-    "@types/node-fetch": "^2.5.8",
+    "@babel/preset-env": "7.24.8",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.96",
+    "@types/morgan": "^1.9.9",
+    "@types/node-fetch": "^2.6.11",
     "babel-eslint": "10.1.0",
-    "nodemon": "2.0.6",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "nodemon": "3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3"
   }
 }
