--- a/packages/web-v2/package.json
+++ b/packages/web-v2/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
