--- a/packages/web-v2/package.json
+++ b/packages/web-v2/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.45.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -46,6 +47,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
