packages(engine): use `vitest` instead of `jest`

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "shared",
-  "version": "1.0.0",
-  "description": "Shared code between durak cards API and clients.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "prepare": "npm run build",
-    "build": "tsc --declaration",
-    "test": "jest"
-  },
-  "repository": "https://github.com/feds01/durak-cards-shared",
-  "author": "Alexander. E. Fedotov",
-  "license": "MIT",
-  "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.10",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.2",
-    "typescript": "^5.5.3"
-  }
+    "name": "shared",
+    "version": "1.0.0",
+    "description": "Shared code between durak cards API and clients.",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "prepare": "npm run build",
+        "build": "tsc --declaration",
+        "check": "tsc --noEmit",
+        "fmt": "prettier --write .",
+        "test": "vitest run"
+    },
+    "repository": "https://github.com/feds01/durachok",
+    "author": "Alexander. E. Fedotov",
+    "license": "MIT",
+    "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "@types/node": "^20.14.10",
+        "prettier": "^3.3.3",
+        "typescript": "^5.5.3",
+        "vitest": "^2.0.3"
+    }
 }
