--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,46 +3,47 @@
   "author": "Alexander. E. Fedotov",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "tsc --project ./",
-    "start": "NODE_ENV=production node dist/app.js",
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "dev": "tsx watch src/index",
+    "lint": "eslint --cache --ext \".js,.ts,.tsx\" src",
+    "check": "tsc",
+    "build": "esbuild src/index.ts --bundle --packages=external --platform=node --format=esm --outdir=dist --sourcemap",
+    "start": "pnpm dev",
+    "test-dev": "start-server-and-test 'tsx src/index' 3000",
+    "test-start": "start-server-and-test 'node dist/index' 3000"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.14.10",
+    "@trpc/server": "^10.45.2",
+    "argon2": "^0.40.3",
     "aws-sdk": "^2.1659.0",
-    "bcryptjs": "2.4.3",
-    "cookie-parser": "1.4.6",
+    "chalk": "^5.3.0",
     "cors": "2.8.5",
-    "debug": "4.3.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "helmet": "^7.1.0",
-    "joi": "^17.13.3",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.5.1",
-    "morgan": "1.10.0",
     "nanoid": "5.0.7",
     "node-fetch": "^3.3.2",
     "shared": "file:./../engine/",
     "socket.io": "4.7.5",
-    "winston": "^3.13.1"
+    "trpc-panel": "^1.3.4",
+    "winston": "^3.13.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.8",
-    "@babel/core": "^7.24.9",
-    "@babel/node": "^7.24.8",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "7.24.8",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^20.14.10",
     "@types/node-fetch": "^2.6.11",
-    "babel-eslint": "10.1.0",
-    "nodemon": "3.1.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "esbuild": "^0.17.10",
+    "eslint": "^8.56.0",
+    "npm-run-all": "^4.1.5",
+    "start-server-and-test": "^2.0.4",
+    "tsx": "^4.0.0",
+    "typescript": "^5.5.3",
+    "wait-port": "^1.0.1"
   }
 }
