--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --cache --ext \".js,.ts,.tsx\" src",
     "check": "tsc",
     "build": "esbuild src/index.ts --bundle --packages=external --platform=node --format=esm --outdir=dist --sourcemap",
+    "fmt": "prettier --write .",
     "start": "pnpm dev",
     "test-dev": "start-server-and-test 'tsx src/index' 3000",
     "test-start": "start-server-and-test 'node dist/index' 3000"
@@ -33,6 +34,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
@@ -41,6 +43,7 @@
     "esbuild": "^0.17.10",
     "eslint": "^8.56.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.3",
     "start-server-and-test": "^2.0.4",
     "tsx": "^4.0.0",
     "typescript": "^5.5.3",
