--- a/packages/web-v2/package.json
+++ b/packages/web-v2/package.json
@@ -17,8 +17,11 @@
     "@hookform/resolvers": "^3.9.0",
     "@mars/heroku-js-runtime-env": "^3.0.2",
     "@mui/material": "^5.16.4",
+    "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-router": "^1.45.4",
     "@tanstack/router-devtools": "^1.45.4",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
     "framer-motion": "^11.3.4",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
