--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "dev": "tsx watch src/index",
-        "lint": "eslint --cache --ext \".js,.ts,.tsx\" src",
+        "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
         "check": "tsc",
         "build": "esbuild src/index.ts --bundle --packages=external --platform=node --format=esm --outdir=dist --sourcemap",
         "fmt": "prettier --write .",
@@ -40,6 +40,7 @@
         "@types/morgan": "^1.9.9",
         "@types/node": "^20.14.10",
         "@types/node-fetch": "^2.6.11",
+        "@typescript-eslint/eslint-plugin": "^7.16.1",
         "esbuild": "^0.17.10",
         "eslint": "^8.56.0",
         "npm-run-all": "^4.1.5",
