--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "durachock-server",
+    "name": "@durachok/server",
     "author": "Alexander. E. Fedotov",
     "version": "1.0.0",
     "private": true,
@@ -9,10 +9,7 @@
         "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
         "check": "tsc",
         "build": "esbuild src/index.ts --bundle --packages=external --platform=node --format=esm --outdir=dist --sourcemap",
-        "fmt": "prettier --write .",
-        "start": "pnpm dev",
-        "test-dev": "start-server-and-test 'tsx src/index' 3000",
-        "test-start": "start-server-and-test 'node dist/index' 3000"
+        "fmt": "prettier --write ."
     },
     "dependencies": {
         "@trpc/server": "^10.45.2",
@@ -24,6 +21,7 @@
         "express": "4.19.2",
         "helmet": "^7.1.0",
         "jsonwebtoken": "9.0.2",
+        "mongodb": "^6.8.0",
         "mongoose": "8.5.1",
         "nanoid": "5.0.7",
         "node-fetch": "^3.3.2",
@@ -37,15 +35,12 @@
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
-        "@types/morgan": "^1.9.9",
         "@types/node": "^20.14.10",
         "@types/node-fetch": "^2.6.11",
         "@typescript-eslint/eslint-plugin": "^7.16.1",
         "esbuild": "^0.17.10",
         "eslint": "^8.56.0",
-        "npm-run-all": "^4.1.5",
         "prettier": "^3.3.3",
-        "start-server-and-test": "^2.0.4",
         "tsx": "^4.0.0",
         "typescript": "^5.5.3",
         "wait-port": "^1.0.1"
