apps: upgrade tRPC to `v11`

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,11 +18,11 @@
     "@mars/heroku-js-runtime-env": "^3.0.2",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
-    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-router": "^1.45.4",
     "@tanstack/router-devtools": "^1.45.4",
-    "@trpc/client": "^10.45.2",
-    "@trpc/react-query": "^10.45.2",
+    "@trpc/client": "11.0.0-rc.466",
+    "@trpc/react-query": "11.0.0-rc.466",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.4",
     "react": "^18.3.1",
