--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,7 +12,7 @@
         "fmt": "prettier --write ."
     },
     "dependencies": {
-        "@trpc/server": "^10.45.2",
+        "@trpc/server": "11.0.0-rc.466",
         "argon2": "^0.40.3",
         "aws-sdk": "^2.1659.0",
         "chalk": "^5.3.0",
@@ -28,7 +28,7 @@
         "node-fetch": "^3.3.2",
         "shared": "file:./../../packages/engine",
         "socket.io": "4.7.5",
-        "trpc-panel": "^1.3.4",
+        "@metamorph/trpc-panel": "^1.0.5",
         "winston": "^3.13.1",
         "zod": "^3.23.8"
     },
