--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,6 +28,7 @@
         "node-fetch": "^3.3.2",
         "shared": "file:./../../packages/engine",
         "socket.io": "4.7.5",
+        "superjson": "^2.2.1",
         "@metamorph/trpc-panel": "^1.0.5",
         "winston": "^3.13.1",
         "zod": "^3.23.8"
