--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@tanstack/router-devtools": "^1.45.4",
     "@trpc/client": "11.0.0-rc.466",
     "@trpc/react-query": "11.0.0-rc.466",
+    "@types/react-google-recaptcha": "^2.1.9",
     "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.4",
