--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,9 +12,12 @@
         "fmt": "prettier --write ."
     },
     "dependencies": {
+        "@aws-sdk/client-cloudfront": "^3.0.0",
+        "@aws-sdk/client-s3": "^3.0.0",
+        "@aws-sdk/s3-request-presigner": "^3.617.0",
+        "@metamorph/trpc-panel": "^1.0.5",
         "@trpc/server": "11.0.0-rc.466",
         "argon2": "^0.40.3",
-        "aws-sdk": "^2.1659.0",
         "chalk": "^5.3.0",
         "cors": "2.8.5",
         "dotenv": "16.4.5",
@@ -29,7 +32,6 @@
         "shared": "file:./../../packages/engine",
         "socket.io": "4.7.5",
         "superjson": "^2.2.1",
-        "@metamorph/trpc-panel": "^1.0.5",
         "winston": "^3.13.1",
         "zod": "^3.23.8"
     },
