--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,7 +40,8 @@
     "superjson": "^2.2.1",
     "use-sound": "^4.0.3",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@durachok/transport": "file:./../../packages/transport"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.45.3",
