--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -33,7 +33,8 @@
         "socket.io": "4.7.5",
         "superjson": "^2.2.1",
         "winston": "^3.13.1",
-        "zod": "^3.23.8"
+        "zod": "^3.23.8",
+        "@durachok/transport": "file:./../../packages/transport"
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
