--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "fmt": "prettier --write src"
   },
   "dependencies": {
+    "@durachok/transport": "file:./../../packages/transport",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -18,6 +19,7 @@
     "@mars/heroku-js-runtime-env": "^3.0.2",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@mui/system": "^5.16.4",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-router": "^1.45.4",
     "@tanstack/router-devtools": "^1.45.4",
@@ -40,8 +42,7 @@
     "superjson": "^2.2.1",
     "use-sound": "^4.0.3",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8",
-    "@durachok/transport": "file:./../../packages/transport"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.45.3",
