--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
         "@aws-sdk/client-cloudfront": "^3.0.0",
         "@aws-sdk/client-s3": "^3.0.0",
         "@aws-sdk/s3-request-presigner": "^3.617.0",
+        "@durachok/transport": "file:./../../packages/transport",
         "@metamorph/trpc-panel": "^1.0.5",
         "@trpc/server": "11.0.0-rc.466",
         "argon2": "^0.40.3",
@@ -34,7 +35,7 @@
         "superjson": "^2.2.1",
         "winston": "^3.13.1",
         "zod": "^3.23.8",
-        "@durachok/transport": "file:./../../packages/transport"
+        "zod-sockets": "^2.0.1"
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
