--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,10 +30,11 @@
         "mongoose": "8.5.1",
         "nanoid": "5.0.7",
         "node-fetch": "^3.3.2",
+        "pino": "^9.3.2",
+        "pino-pretty": "^11.2.2",
         "shared": "file:./../../packages/engine",
         "socket.io": "4.7.5",
         "superjson": "^2.2.1",
-        "winston": "^3.13.1",
         "zod": "^3.23.8",
         "zod-sockets": "^2.0.1"
     },
