--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "module": "esnext",
         "lib": ["esnext"],
         "target": "esnext",
         "esModuleInterop": true,
