--- a/packages/transport/package.json
+++ b/packages/transport/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "prepare": "npm run build",
         "build": "tsc --declaration",
-        "lint": "tsc --noEmit",
+        "check": "tsc --noEmit",
         "fmt": "prettier --write ."
     },
     "repository": "https://github.com/feds01/durachok",
