chore: rename `shared` package to `@durachok/engine`
This commit renames the `shared` package to `@durachok/engine` to better
reflect the package's purpose.

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,6 +16,7 @@
         "@aws-sdk/client-cloudfront": "^3.0.0",
         "@aws-sdk/client-s3": "^3.0.0",
         "@aws-sdk/s3-request-presigner": "^3.617.0",
+        "@durachok/engine": "file:../../packages/engine",
         "@durachok/transport": "file:./../../packages/transport",
         "@metamorph/trpc-panel": "^1.0.5",
         "@trpc/server": "11.0.0-rc.466",
@@ -33,7 +34,6 @@
         "node-fetch": "^3.3.2",
         "pino": "^9.3.2",
         "pino-pretty": "^11.2.2",
-        "shared": "file:./../../packages/engine",
         "socket.io": "4.7.5",
         "superjson": "^2.2.1",
         "zod": "^3.23.8",
