--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,67 +1,67 @@
 {
-  "name": "@durachok/web",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "fmt": "prettier --write src"
-  },
-  "dependencies": {
-    "@durachok/transport": "file:./../../packages/transport",
-    "@emotion/css": "^11.11.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@hookform/resolvers": "^3.9.0",
-    "@mars/heroku-js-runtime-env": "^3.0.2",
-    "@mui/icons-material": "^5.16.4",
-    "@mui/material": "^5.16.4",
-    "@mui/system": "^5.16.4",
-    "@tanstack/react-query": "^5.51.11",
-    "@tanstack/react-router": "^1.45.4",
-    "@tanstack/router-devtools": "^1.45.4",
-    "@trpc/client": "11.0.0-rc.466",
-    "@trpc/react-query": "11.0.0-rc.466",
-    "@types/react-google-recaptcha": "^2.1.9",
-    "buffer": "^6.0.3",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.3.4",
-    "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.3.1",
-    "react-google-recaptcha": "^3.1.0",
-    "react-hook-form": "^7.52.1",
-    "react-loader-spinner": "6.1.6",
-    "react-transition-group": "^4.4.5",
-    "react-virtuoso": "^4.7.12",
-    "shared": "file:./../../packages/engine",
-    "socket.io-client": "4.7.5",
-    "superjson": "^2.2.1",
-    "use-sound": "^4.0.3",
-    "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@tanstack/router-plugin": "^1.45.3",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^20.14.11",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vite-plugin-svgr": "^4.2.0"
-  }
+    "name": "@durachok/web",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "fmt": "prettier --write src package.json"
+    },
+    "dependencies": {
+        "@durachok/engine": "file:./../../packages/engine",
+        "@durachok/transport": "file:./../../packages/transport",
+        "@emotion/css": "^11.11.2",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@hookform/resolvers": "^3.9.0",
+        "@mars/heroku-js-runtime-env": "^3.0.2",
+        "@mui/icons-material": "^5.16.4",
+        "@mui/material": "^5.16.4",
+        "@mui/system": "^5.16.4",
+        "@tanstack/react-query": "^5.51.11",
+        "@tanstack/react-router": "^1.45.4",
+        "@tanstack/router-devtools": "^1.45.4",
+        "@trpc/client": "11.0.0-rc.466",
+        "@trpc/react-query": "11.0.0-rc.466",
+        "@types/react-google-recaptcha": "^2.1.9",
+        "buffer": "^6.0.3",
+        "clsx": "^2.1.1",
+        "framer-motion": "^11.3.4",
+        "react": "^18.3.1",
+        "react-beautiful-dnd": "^13.1.1",
+        "react-dom": "^18.3.1",
+        "react-google-recaptcha": "^3.1.0",
+        "react-hook-form": "^7.52.1",
+        "react-loader-spinner": "6.1.6",
+        "react-transition-group": "^4.4.5",
+        "react-virtuoso": "^4.7.12",
+        "socket.io-client": "4.7.5",
+        "superjson": "^2.2.1",
+        "use-sound": "^4.0.3",
+        "usehooks-ts": "^3.1.0",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@tanstack/router-plugin": "^1.45.3",
+        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "@types/node": "^20.14.11",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^7.15.0",
+        "@typescript-eslint/parser": "^7.15.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "dotenv": "^16.4.5",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.7",
+        "prettier": "^3.3.3",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.2.2",
+        "vite": "^5.3.4",
+        "vite-plugin-svgr": "^4.2.0"
+    }
 }
