--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,28 +13,28 @@
         "fmt": "prettier --write ."
     },
     "dependencies": {
-        "@aws-sdk/client-cloudfront": "^3.0.0",
-        "@aws-sdk/client-s3": "^3.0.0",
-        "@aws-sdk/s3-request-presigner": "^3.617.0",
+        "@aws-sdk/client-cloudfront": "^3.654.0",
+        "@aws-sdk/client-s3": "^3.657.0",
+        "@aws-sdk/s3-request-presigner": "^3.657.0",
         "@durachok/engine": "file:../../packages/engine",
         "@durachok/transport": "file:./../../packages/transport",
         "@metamorph/trpc-panel": "^1.0.5",
         "@trpc/server": "11.0.0-rc.466",
-        "argon2": "^0.40.3",
+        "argon2": "^0.41.1",
         "chalk": "^5.3.0",
         "cors": "2.8.5",
         "dotenv": "16.4.5",
-        "express": "4.19.2",
+        "express": "4.21.0",
         "fs-extra": "^11.2.0",
         "helmet": "^7.1.0",
         "jsonwebtoken": "9.0.2",
-        "mongodb": "^6.8.0",
-        "mongoose": "8.5.1",
+        "mongodb": "^6.9.0",
+        "mongoose": "8.6.3",
         "nanoid": "5.0.7",
         "node-fetch": "^3.3.2",
-        "pino": "^9.3.2",
+        "pino": "^9.4.0",
         "pino-pretty": "^11.2.2",
-        "socket.io": "4.7.5",
+        "socket.io": "4.8.0",
         "superjson": "^2.2.1",
         "zod": "^3.23.8",
         "zod-sockets": "^2.1.0"
@@ -44,15 +44,15 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/fs-extra": "^11.0.4",
-        "@types/jsonwebtoken": "^9.0.6",
-        "@types/node": "^20.14.10",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/node": "^22.6.0",
         "@types/node-fetch": "^2.6.11",
-        "@typescript-eslint/eslint-plugin": "^7.16.1",
-        "esbuild": "^0.17.10",
+        "@typescript-eslint/eslint-plugin": "8.7.0",
+        "esbuild": "^0.24.0",
         "eslint": "^8.56.0",
         "prettier": "^3.3.3",
-        "tsx": "^4.0.0",
-        "typescript": "^5.5.3",
-        "wait-port": "^1.0.1"
+        "tsx": "^4.19.1",
+        "typescript": "^5.6.2",
+        "wait-port": "^1.1.0"
     }
 }
