--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "fmt": "prettier --write src package.json"
     },
@@ -45,6 +45,9 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@eslint/compat": "^1.2.1",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^9.13.0",
         "@tanstack/router-plugin": "^1.73.1",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/node": "^22.7.7",
