--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,6 +13,7 @@
         "fmt": "prettier --write ."
     },
     "dependencies": {
+        "@3xpo/locked": "^0.1.15",
         "@aws-sdk/client-cloudfront": "^3.675.0",
         "@aws-sdk/client-s3": "^3.675.0",
         "@aws-sdk/s3-request-presigner": "^3.675.0",
