--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,7 +18,7 @@
         "@aws-sdk/client-s3": "^3.717.0",
         "@aws-sdk/s3-request-presigner": "^3.675.0",
         "@durachok/engine": "file:../../packages/engine",
-        "@durachok/transport": "file:./../../packages/transport",
+        "@durachok/transport": "file:../../packages/transport",
         "@metamorph/trpc-panel": "^1.0.5",
         "@trpc/server": "11.0.0-rc.630",
         "argon2": "^0.41.1",
