--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -4,6 +4,13 @@
     "description": "Shared code between durak cards API and clients.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "type": "module",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "scripts": {
         "prepare": "npm run build",
         "build": "tsc --declaration",
