--- a/package.json
+++ b/package.json
@@ -2,41 +2,37 @@
     "name": "@durachok/root",
     "version": "0.0.0",
     "description": "Durachok App",
+    "license": "MIT",
     "author": "Alexander Fedotov",
     "maintainers": [
         "Alexander Fedotov"
     ],
-    "type": "module",
-    "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/feds01/durachok.git"
     },
-    "engines": {
-        "node": ">=22"
-    },
-    "packageManager": "pnpm@10.28.2",
+    "type": "module",
     "scripts": {
-        "fmt": "turbo fmt",
-        "lint": "turbo lint",
+        "fmt": "oxfmt .",
+        "fmt:check": "oxfmt --check .",
+        "lint": "oxlint .",
+        "lint:fix": "oxlint --fix .",
         "check": "turbo check",
         "test": "turbo test",
         "dev": "turbo dev"
     },
     "dependencies": {
         "@total-typescript/ts-reset": "^0.6.1",
-        "@types/eslint": "^9.6.1",
         "@types/node": "^25.2.0",
-        "@typescript-eslint/eslint-plugin": "^8.54.0",
-        "@typescript-eslint/parser": "^8.54.0",
-        "eslint": "^9.39.2",
-        "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-import": "^2.32.0",
-        "eslint-plugin-prettier": "^5.5.5",
-        "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "^7.0.1",
-        "prettier": "^3.8.1",
         "turbo": "^2.8.1",
         "typescript": "^5.9.3"
-    }
+    },
+    "devDependencies": {
+        "oxfmt": "^0.27.0",
+        "oxlint": "^1.42.0"
+    },
+    "engines": {
+        "node": ">=22"
+    },
+    "packageManager": "pnpm@10.28.2"
 }
