web: Re-write components with Tailwind CSS and Shadcn UI

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,15 @@
     "dependencies": {
         "@durachok/engine": "file:./../../packages/engine",
         "@durachok/transport": "file:./../../packages/transport",
-        "@emotion/css": "^11.13.5",
-        "@emotion/react": "^11.14.0",
-        "@emotion/styled": "^11.14.1",
         "@hookform/resolvers": "^5.2.2",
         "@mars/heroku-js-runtime-env": "^3.0.2",
-        "@mui/icons-material": "^7.3.7",
-        "@mui/material": "^7.3.7",
-        "@mui/system": "^7.3.7",
+        "@radix-ui/react-avatar": "^1.1.11",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-label": "^2.1.8",
+        "@radix-ui/react-separator": "^1.1.8",
+        "@radix-ui/react-slider": "^1.3.6",
+        "@radix-ui/react-slot": "^1.2.4",
         "@tanstack/react-query": "^5.90.20",
         "@tanstack/react-router": "^1.157.18",
         "@tanstack/router-devtools": "^1.157.18",
@@ -26,8 +27,10 @@
         "@trpc/react-query": "11.9.0",
         "@types/react-google-recaptcha": "^2.1.9",
         "buffer": "^6.0.3",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.29.2",
+        "lucide-react": "^0.563.0",
         "react": "^19.2.4",
         "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^19.2.4",
@@ -38,12 +41,14 @@
         "react-virtuoso": "^4.18.1",
         "socket.io-client": "4.8.3",
         "superjson": "^2.2.6",
+        "tailwind-merge": "^3.4.0",
         "use-sound": "^5.0.0",
         "usehooks-ts": "^3.1.1",
         "zod": "^4.3.6",
         "zustand": "^5.0.11"
     },
     "devDependencies": {
+        "@tailwindcss/vite": "^4.1.18",
         "@tanstack/router-plugin": "^1.157.18",
         "@types/node": "^25.2.0",
         "@types/react": "^19.2.10",
@@ -51,6 +56,7 @@
         "@vitejs/plugin-react": "^5.1.2",
         "@vitejs/plugin-react-swc": "^4.2.2",
         "dotenv": "^17.2.3",
+        "tailwindcss": "^4.1.18",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.3",
         "vite": "^7.3.1",
