--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,12 +1,12 @@
 packages:
-  - packages/*
-  - apps/*
+    - packages/*
+    - apps/*
 
 overrides:
-  '@babel/runtime@<7.26.10': '>=7.26.10'
-  cookie@<0.7.0: '>=0.7.0'
-  diff@>=4.0.0 <4.0.4: '>=4.0.4'
-  diff@>=6.0.0 <8.0.3: '>=8.0.3'
-  fast-xml-parser@>=4.3.6 <=5.3.3: '>=5.3.4'
-  qs@<6.14.1: '>=6.14.1'
-  webpack@>=5.0.0-alpha.0 <5.94.0: '>=5.94.0'
+    "@babel/runtime@<7.26.10": ">=7.26.10"
+    cookie@<0.7.0: ">=0.7.0"
+    diff@>=4.0.0 <4.0.4: ">=4.0.4"
+    diff@>=6.0.0 <8.0.3: ">=8.0.3"
+    fast-xml-parser@>=4.3.6 <=5.3.3: ">=5.3.4"
+    qs@<6.14.1: ">=6.14.1"
+    webpack@>=5.0.0-alpha.0 <5.94.0: ">=5.94.0"
