--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "typescript": "^5.9.3"
     },
     "devDependencies": {
+        "@typescript/native-preview": "7.0.0-dev.20260205.1",
         "oxfmt": "^0.28.0",
         "oxlint": "^1.43.0"
     },
