--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc -b && vite build",
+        "build": "tsgo -b && vite build",
         "preview": "vite preview"
     },
     "dependencies": {
