--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -16,8 +16,8 @@
     },
     "scripts": {
         "prepare": "npm run build",
-        "build": "tsc --declaration",
-        "check": "tsc --noEmit",
+        "build": "tsgo --declaration",
+        "check": "tsgo --noEmit",
         "test": "vitest run"
     },
     "dependencies": {
