--- a/packages/transport/package.json
+++ b/packages/transport/package.json
@@ -16,8 +16,8 @@
     },
     "scripts": {
         "prepare": "npm run build",
-        "build": "tsc --declaration",
-        "check": "tsc --noEmit"
+        "build": "tsgo --declaration",
+        "check": "tsgo --noEmit"
     },
     "dependencies": {
         "buffer": "^6.0.3",
